correction mobilee

--- a/style.css
+++ b/style.css
@@ -2091,7 +2091,21 @@ nav ul li.dropdown > a:hover {
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         z-index: 1000;
     }
+     .hero-content h1 {
+        font-size: 2.2rem !important;
+        line-height: 1.2 !important;
+    }
     
+    .hero-content {
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+        max-width: 100% !important;
+        text-align: center !important;
+    }
+    
+    .hero-content p {
+        font-size: 1.1rem !important;
+    }
     .header-container {
         height: 80px !important;
         padding: 8px 0 !important;
@@ -2472,6 +2486,7 @@ nav ul li.dropdown > a:hover {
 @media (max-width: 480px) {
     .header-container {
         height: 75px !important;
+        
     }
     
     .logo img {
